# Berb

./: .gitignore  BERB_IMPLEMENTATION_PROMPT_v6.1_FINAL.md  BERB_IMPLEMENTATION_PROMPT_v7_FINAL.md  BERB_IMPLEMENTATION_PROMPT_v8_FINAL.md  BERB_OPTIMIZATION_PLAN_v1.md  BERB_V6_PHASE1_INTEGRATIONS.md  CLAUDE.md  CONTRIBUTING.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  QWEN.md  README.md  README_TOPIC_APPROVAL.txt  REASONING_INTEGRATION_ANALYSIS_P0P1.md  REASONING_METHOD_INTEGRATION_ANALYSIS.md  RELEASE_NOTES_v3.0.md  RELIABILITY_REPORT_20260328.md  REORGANIZE_QUICK_GUIDE.md  TEST_RESEARCH_SUBMISSION.md  TODO.md  TODO_V6.md  compass_artifact_wf-bed50ba6-cdc8-4cb2-afab-471621390c2d_text_markdown.md  config.arc.example.yaml  config.berb.example.yaml  config.berb.humanities.yaml  config.berb.production.yaml  config.berb.yaml  docker-compose.firecrawl.yml  docker-compose.searxng.yml  launch-topic-approval-fixed.bat  launch-topic-approval.bat  launch_topic_approval.py  llm_workflow_orchestration.md  multi_model_research_pipeline.md  pyproject.toml  start-api-server.py  start-webui.bat  start-webui.sh
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_WEEK1.md
berb/: __init__.py  __main__.py  cli.py  config.py  evolution.py  hardware.py  health.py  prompts.py  report.py
claude-scholar-main/: CLAUDE.md  CLAUDE.zh-CN.md
configs/: config.berb.example.yaml  physics_chaos.yaml  physics_hamiltonian.yaml
docs/: ARCHITECTURE_v2.md  ARCHITECTURE_v3_OPTIMIZATIONS.md  BERB_IMPLEMENTATION_PROMPT.md  BERB_V6.1_COMPLETE.md  BERB_V6.1_IMPLEMENTATION_PLAN.md  BERB_V6.1_PROGRESS.md  BERB_V6_COMPLETE.md  BERB_V6_P1_COMPLETE.md  BERB_V6_PHASE1_COMPLETE.md  BERB_V6_PHASE2_COMPLETE.md  BRANDING.md  BUGFIXES_COMPLETE.md  CHANGELOG_ANTHROPIC_ADAPTER.md  CLAUDE_SCHOLAR_ENHANCEMENTS.md  CODEBASE_MIND_MAP.md  COMPREHENSIVE_INTEGRATION_SUMMARY.md  COST_OPTIMIZATION_GUIDE.md  DOCUMENTATION_CLEANUP.md  ENHANCEMENT_SUMMARY.md  EXTENDED_IMPLEMENTATION_PLAN.md  EXTENDED_MODEL_COMPARISON.md  FIX_DOCTOR_ERRORS.md  GREY_LITERATURE_SEARCH.md  HOW_BERB_WORKS.md  HYPERAGENTS_ANALYSIS.md  HYPERAGENTS_PAPER_ANALYSIS.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INDEX.md  INTEGRATION_SUMMARY.md  MANAGEMENT_CAPABILITIES.md  MNEMO_CORTEX_INTEGRATION_PLAN.md  MODELS.md  NADIRCLAW_INTEGRATION_PLAN.md  NADIRCLAW_INTEGRATION_SUMMARY.md  NAMING_CONVENTION.md  OPENROUTER_MODEL_SELECTION.md  OPT2_ANALYSIS.md  OPTIMIZATIONS_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  (+45 more)
researchclaw/: __init__.py
scripts/: add_author_attribution.py  cleanup_docs.bat  merge_to_main.bat  merge_to_main_FIXED.bat  plot_iteration_showcase.py  push_to_github.bat  push_to_github.sh  rename.txt  reorganize_project.bat  sentinel.sh  (+5 more)
(+606 files in other folders)
