[project]
name = "berb-research"
version = "1.0.0"
description = "Berb — Research, Refined. AI-powered research automation with 85% cost reduction."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "arxiv>=2.1",
    "numpy>=1.24",
    "httpx>=0.24",
    "pydantic>=2.0",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Georgios-Chrysovalantis Chatzivantsidis", email = "berb-support@example.com"}
]
keywords = [
    "research",
    "automation",
    "AI",
    "literature-review",
    "paper-writing",
    "academic",
    "self-improving",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
deepseek = ["openai>=1.0"]  # Uses OpenAI-compatible API
perplexity = []  # Built-in
xai = []  # Built-in
web = ["scholarly>=1.7", "crawl4ai>=0.2", "tavily-python>=0.3"]
pdf = ["PyMuPDF>=1.23"]
all = [
    "anthropic>=0.20",
    "openai>=1.0",
    "scholarly>=1.7",
    "crawl4ai>=0.2",
    "tavily-python>=0.3",
    "PyMuPDF>=1.23",
    "huggingface-hub>=0.20",
    "matplotlib>=3.7",
    "scipy>=1.10",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "httpx>=0.24"]

[project.scripts]
berb = "berb.cli:main"

[project.urls]
Homepage = "https://github.com/georgehadji/berb"
Documentation = "https://github.com/georgehadji/berb/docs"
Repository = "https://github.com/georgehadji/berb"
Issues = "https://github.com/georgehadji/berb/issues"
Changelog = "https://github.com/georgehadji/berb/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["berb"]

[tool.hatch.build.targets.wheel.force-include]
"berb/templates/styles" = "berb/templates/styles"
"berb/data" = "berb/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests",
    "llm: tests requiring LLM API access",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
